# loom-core

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_04_26_6ee38e331de0_w2_002_work_account_metadata.py  2026_04_26_b3036cdd7161_w2_003_work_engagement_metadata_atom_.py  2026_04_26_bf4d89061130_w1_universal_core_and_operational_.py  2026_05_03_phaseA_001_v08_schema_alignment.py
launchd/: com.loom.core.plist
src/loom_core/: __init__.py  cli.py  config.py  main.py
src/loom_core/api/: __init__.py  _deps.py  arenas.py  atoms.py  engagements.py  events.py  external_references.py  health.py  hypotheses.py
src/loom_core/llm/: __init__.py  claude.py
src/loom_core/pipelines/: __init__.py  extractor_llm.py  extractor_rules.py  inbox_sweep.py  sniffer.py
src/loom_core/services/: __init__.py  arenas.py  atoms.py  engagements.py  events.py  external_references.py  hypotheses.py  processor_runs.py  triage.py
src/loom_core/storage/: __init__.py  models.py  session.py  types.py  visibility.py
src/loom_core/vault/: __init__.py
tests/: conftest.py  test_arenas.py  test_atoms_search.py  test_atoms_status.py  test_engagements.py  test_events.py  test_external_references.py  test_health.py  test_health_processor.py  test_hypotheses.py  test_lifespan.py  test_migration.py  test_migration_002.py  test_migration_003.py  test_migration_v08.py  test_orm_v08_cross_cutting.py  test_orm_v08_inference_metadata.py  test_orm_v08_resources.py  test_orm_v08_retraction_audience.py  test_orm_v08_visibility_membership.py  test_session_datetime.py  test_session_engine.py  test_visibility.py  test_visibility_invariants.py
tests/integration/: test_t1_seam.py
tests/llm/: test_claude.py
tests/pipelines/: test_extractor_llm.py  test_extractor_rules.py  test_inbox_sweep.py  test_sniffer.py
tests/services/: test_events_service.py  test_external_references_service.py  test_hypotheses_service.py  test_processor_runs_service.py  test_triage_service.py
